# LR9

./: .gitignore  PROMPT_LOG.md  README.md
.github/: CI_CD_GUIDE.md
.github/workflows/: build_wheels.yml  publish_pypi.yml  rust_test.yml
benchmark/: README.md  benchmark.py  benchmark_results_20260320_204036.csv
benchmark/go-sum/: build.sh  go.mod  go_sum.go  setup.py
benchmark/pyo3-sum/: Cargo.toml  LICENSE  README.md  pyproject.toml
benchmark/pyo3-sum/src/: lib.rs
benchmark/pyo3-sum/tests/: test_python.py
clients/: tcp_client.py
pyo3-person/: Cargo.toml  README.md  example_rust.py  pyproject.toml
pyo3-person/src/: lib.rs
pyo3-person/tests/: test_person.py
tcp-server/: go.mod  main.go  main_test.go
