[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pyo3-person"
version = "0.1.0"
description = "Rust library with Person class exposed to Python via PyO3"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Author", email = "author@example.com" }
]
keywords = ["rust", "pyo3", "person", "native"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/username/pyo3-person"
Repository = "https://github.com/username/pyo3-person.git"
Issues = "https://github.com/username/pyo3-person/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
include = ["README.md", "LICENSE"]
