[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pyo3-sum"
version = "0.1.0"
description = "Rust library for sum of squares calculation exposed to Python via PyO3"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.maturin]
features = ["pyo3/extension-module"]
